--- a/views/base.pug
+++ b/views/base.pug
@@ -15,4 +15,4 @@ html
         include _header
         block content
         include _footer
-        //- script(src='/js/bundle.js') 
+        script(src='/js/bundle.js') 
